<resources>
    <string name="app_name">MyCropSeller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile_nav">Profile</string>
    <string name="category_nav">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="new_product">New Product</string>
    <string name="carts">Carts</string>
    <string name="my_orders">My Orders</string>
    <string name="search_item">Search Item</string>
    <string name="farm_monitor">Monitor</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="call_now">Call Now</string>
    <string name="_0148180021">0148180021</string>
    <string name="_014818000">014818000</string>
</resources>