<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mymonitor"
            android:icon="@drawable/ic_baseline_photo_camera_24"
            android:title="@string/farm_monitor" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menuhome"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_person"
            android:title="@string/profile_nav" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/category_nav" />
        <item
            android:id="@+id/nav_mycarts"
            android:icon="@drawable/mycart"
            android:title="@string/carts" />
        <item
            android:id="@+id/nav_newProduct"
            android:icon="@drawable/ic_baseline_local_phone_24"
            android:title="@string/contact_seller" />

    </group>
</menu>